# scm-extraction

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
configs/experiments/: sir_basic.yaml
docs/: adding_extractors.md
scripts/: run_benchmark.py  run_extraction.py
src/scmextract/: __init__.py  cli.py
src/scmextract/core/: __init__.py  base.py  config.py  types.py
src/scmextract/evaluation/: __init__.py  metrics.py
src/scmextract/extractors/: __init__.py  ast_extractor.py  registry.py
src/scmextract/simulators/: __init__.py  registry.py  sir.py
src/scmextract/visualization/: __init__.py  graph_viz.py
tests/: conftest.py
tests/test_evaluation/: test_metrics.py
tests/test_extractors/: test_ast_extractor.py
tests/test_simulators/: test_sir.py
